# agentic_language_learning

./: .gitignore  CLAUDE_INSTRUCTIONS.md  README.md  ROADMAP.md
.claude/: settings.local.json
backend/: .env.example  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20251126_1246_3bcd0ec173d6_initial_schema.py  20251126_2126_7f8ff49b838b_add_user_preferences.py
backend/src/: __init__.py  main.py
backend/src/api/: dependencies.py
backend/src/api/routes/: __init__.py  auth.py  health.py  vocabulary.py
backend/src/core/: config.py  exceptions.py  security.py
backend/src/db/: session.py
backend/src/models/: __init__.py  chat.py  skill.py  user.py  word.py  writing.py
backend/src/schemas/: __init__.py  chat.py  user.py  word.py
backend/src/scripts/: seed_words.py
backend/src/services/: auth.py  srs.py  vocabulary.py
backend/tests/: conftest.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/: manifest.webmanifest
frontend/src/: App.tsx
frontend/src/components/common/: Layout.tsx  ProtectedRoute.tsx  SkillCard.tsx
frontend/src/pages/: BrowseWordsPage.tsx  ChatPage.tsx  GrammarPage.tsx  HomePage.tsx  LoginPage.tsx  ProfilePage.tsx  RegisterPage.tsx  ReviewPage.tsx  VocabularyPage.tsx
frontend/src/services/: api.ts  auth.ts  vocabulary.ts
frontend/src/store/: authStore.ts
frontend/src/styles/: index.css
frontend/src/types/: index.ts
temp/.scratch/: .gitkeep
